@@ -28,6 +28,7 @@ Version 1.13.0-dev:
    * Changed: Dropped support for AmigaOS, BeOS, and OS/2.
    * Increased the sound mixer channel allocation from 16 to 32, thereby
      raising the limit for simultaneous sound effects from 5 to 21.
+   * Fix bug #21758: "Ready not blocked while player pick faction."
 
 Version 1.11.11:
  * Add-ons server:
